--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,13 @@ services:
     environment:
       REDIS_HOST: redis
       REDIS_PORT: 6379
-
+    env_file:
+      - .env
   redis:
     image: redis:latest
-    ports:
-      - "6379:6379"
+    command: redis-server --appendonly yes --requirepass "${REDIS_PASSWORD}"
     volumes:
       - redis-data:/data
 
 volumes:
-  redis-data:
+  redis-data: {}  # phải có dòng này
