--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,12 +5,12 @@ logfile_maxbytes=0
 
 [program:script1]
 command=python3 -m app.run_worker
-autorestart=true
+autorestart=false
 stdout_logfile=|cat
 stderr_logfile=|cat
 
 [program:script2]
 command=uvicorn app.main:app --host 0.0.0.0 --port 8000
-autorestart=true
+autorestart=false
 stdout_logfile=|cat
 stderr_logfile=|cat
